--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Home</li>
+		<li data-ns-test="shoppingList">Car</li>
+		<li data-ns-test="shoppingList">Mobile</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Germaney</li>
+		<li data-ns-test="holidayList">Landon</li>
+		<li data-ns-test="holidayList">Prayag</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
